@@ -1,287 +1,308 @@
-import java.io.BufferedReader;
-import java.io.FileReader;
-import java.io.IOException;
+//import com.sun.corba.se.impl.orbutil.ObjectWriter;
+
+import java.io.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.*;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public class Main {
 
-    public static void main(String[] args) {
-        Config config = null;
-        try {
-            config = readGDB();
-        } catch (IOException e) {
-            throw new RuntimeException(e);
+    public static void main(String[] args) throws Exception {
+
+//        System.out.println(args.length);
+//        if(args.length < 1){
+//            System.out.println("Please provide input config file...");
+//            return;
+//        }
+//        String configFile = args[0];
+        String configFile = "config.properties";
+
+        CARPProperties properties = CARPProperties.getInstance();
+        properties.readConfigFile(configFile);
+
+        RUN(properties);
+
+    }
+
+    public static String createExperimentName(CARPProperties properties){
+        char version = 'a';
+        String dirName = properties.resultDir + "/" + properties.dataset + "_" + properties.seed + "_" + version;
+
+        File f;
+        while((f = absolutePath(dirName).toFile()).exists()){
+            dirName = dirName.substring(0, dirName.length()-1);
+            dirName += (char)(++version);
         }
 
-//        Double[][] matrix = floydWarshall(config.nodes);
-        List<Object> matrices = floydWarshall(config.nodes);
-        Double[][] matrix = (Double[][]) matrices.get(0);
-        Double[][] matrix2 = (Double[][]) matrices.get(1);
+        return dirName;
+    }
+    public static Path getDirectory(String directoryName) throws IOException {
+        Path jarPath = Paths.get("").toAbsolutePath();
+        Path dirPathRelative = Paths.get(directoryName);
 
-        System.out.println("matrix2 row: ");
-        System.out.println(Arrays.asList(matrix[1]));
-        System.out.println(Arrays.asList(matrix2[1]));
-        System.out.println(Arrays.asList(matrix[4]));
-        System.out.println(Arrays.asList(matrix2[4]));
+        Path dirPathAbsolute = jarPath.resolve(dirPathRelative);
+        File dirFile = dirPathAbsolute.toFile();
 
-        Entry[][] entries = createEntries(matrix2, config.nodes);
-        System.out.println(Arrays.asList(entries[3]));
+        if(!dirFile.exists()){
+            Files.createDirectories(dirPathAbsolute);
+        }
 
-        Map<Integer, List<Edge>> edgeMap = config.edgeMap;
-        System.out.println("Edge map:");
-        System.out.println(edgeMap.get(7));
+        return dirPathRelative;
+    }
+    public static Path absolutePath(String directoryName){
+        Path jarPath = Paths.get("").toAbsolutePath();
+        Path dirPathRelative = Paths.get(directoryName);
+        return jarPath.resolve(dirPathRelative);
+    }
+
+    public static void RUN(CARPProperties properties) throws IOException {
+        String dir = createExperimentName(properties);
+        System.out.println("output directory: " + dir);
+
+        Path resultDir = getDirectory(dir);
+        Path outSolution = resultDir.resolve("BSF_solution.csv");
+        Path outJournal = resultDir.resolve("BSF_journal.txt");
+        Path outJournalObj = resultDir.resolve("journal.txt");
+        Path outConvergence = resultDir.resolve("convergence.csv");
+        Path outConfig = resultDir.resolve("config.properties");
+        Path outSerializeBest = resultDir.resolve("bestSerialized.txt");
+
+//        byte[] content = new FileInputStream(properties.configFileName).readAllBytes();
+        File f = new File(properties.configFileName);
+        byte[] content = new byte[(int)f.length()];
+        DataInputStream dis = new DataInputStream(new FileInputStream(f));
+        dis.readFully(content);
+
+        FileOutputStream outputStream = new FileOutputStream(outConfig.toFile());
+        outputStream.write(content);
+
+        PrintWriter solutionWriter = new PrintWriter(new FileWriter(outSolution.toFile()));
+        PrintWriter journalWriter = new PrintWriter(new FileWriter(outJournal.toFile()));
+
+        ObjectOutputStream OOS = new ObjectOutputStream(new FileOutputStream(outJournalObj.toFile()));
+//        ObjectOutputStream OOS = new ObjectOutputStream(new BufferedOutputStream(new FileOutputStream(outJournalObj.toFile())));
+
+//        RandomAccessFile raf = new RandomAccessFile(outJournalObj.toFile(), "rw");
+//        FileOutputStream fos = new FileOutputStream(raf.getFD());
+//        ObjectOutputStream OOS = new ObjectOutputStream(fos);
+
+        ObjectOutputStream bestOOS = new ObjectOutputStream(new FileOutputStream(outSerializeBest.toFile()));
+
+        PrintWriter convergenceWriter = new PrintWriter(new FileWriter(outConvergence.toFile()));
+        convergenceWriter.println("generation,currentPopulationBestCost,currentPopulationBestVehicleCount,currentPopulationAverageCost,BSFcost,BSFvehicleCount");
+
+        Config config = readGDB(properties.datasetGroup + "/" + properties.dataset + ".dat");
+        Double[][] matrix = floydWarshall(config.nodes);
+        Random random = new Random(properties.seed);  //SEED
+        config.matrix = matrix;
+        Route.matrix = matrix;
+        Genetic.matrix = matrix;
+        Genetic.config = config;
+        Individual.config = config;
+        Individual.random = random;
+        Genetic.random = random;
 
         List<Edge> requiredEdges = config.edges.stream().filter(e -> e.required).collect(Collectors.toList());
-        System.out.println("original: ");
-        System.out.println(requiredEdges);
 
-        List<Edge> r1 = new ArrayList<>(List.copyOf(requiredEdges));
-//        Collections.shuffle(r1, new Random(1));
-        System.out.println("r1: ");
-        System.out.println(r1);
-        System.out.println(evaluatePriorityList(r1, entries, config, matrix2));
-        System.out.println("result:");
+//        ObjectOutputStream _oos = new ObjectOutputStream(new FileOutputStream("konfigurace.txt"));
+//        _oos.writeObject(config);
+//        _oos.close();
+//
+//        if(true) return;
 
 
-//        List<Edge> r2 = new ArrayList<>(List.copyOf(requiredEdges));
-//        Collections.shuffle(r2, new Random(2));
-//        System.out.println("r2: ");
-//        System.out.println(r2);
-//        System.out.println(evaluatePriorityList(r2, entries, config, matrix2));
-//        System.out.println("result:");
+        Genetic genetic = new Genetic(requiredEdges, journalWriter, convergenceWriter, OOS, bestOOS, properties, resultDir);
+        genetic.evolution(properties.popSize, properties.maxGen, properties.pCross, properties.pMutation, properties.M, properties.k, properties.N, properties.maxEpoch);
 
-//        System.out.println(evaluatePriorityList(requiredEdges, entries, config, matrix2));
+        System.out.println("best solution: " + genetic.BEST.evaluation.cost + " " + genetic.BEST.evaluation.vehicleCount + " found at generation: " + genetic.BEST.nbofGeneration);
 
-//        Genetic genetic = new Genetic(config, matrix2, entries, requiredEdges);
-//        genetic.evolution(10, 10, 0.9, 0.2);
+        solutionWriter.println("bestSolutionGeneration,bestCost,bestVehicleCount");
+        solutionWriter.println(genetic.BEST.nbofGeneration+","+genetic.BEST.evaluation.cost+","+genetic.BEST.evaluation.vehicleCount);
+        solutionWriter.println(genetic.BEST.printRoutes());
+        solutionWriter.flush();
 
+        solutionWriter.close();
+        journalWriter.close();
+        convergenceWriter.close();
+        OOS.close();
+        bestOOS.close();
     }
 
+    public static Config readGDB(String datasetPath) throws IOException {
+//        FileReader fileReader = new FileReader(file);
+//        BufferedReader bufferedReader = new BufferedReader(fileReader);
 
-    public static Evaluation evaluatePriorityList(List<Edge> priority, Entry[][] entries, Config config, Double[][] matrix2){
-        List<Route> routes = construct(priority, entries, config);
-        int cumulativeCost = 0;
-        for (Route r :
-                routes) {
-            cumulativeCost += evaluateRoute(r, matrix2);
+        InputStream is = Main.class.getClassLoader().getResourceAsStream(datasetPath);
+        BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(is));
+
+        String line;
+        Pattern patternDigit = Pattern.compile("\\d+");
+
+        //NOMBRE
+        line = bufferedReader.readLine();
+
+        //COMENTARIO
+        line = bufferedReader.readLine();
+
+        //VERTICES
+        line = bufferedReader.readLine();
+
+        //ARISTAS_REQ
+        line = bufferedReader.readLine();
+        Matcher requiredCountMatch = patternDigit.matcher(line);
+        if(!requiredCountMatch.find()) throw new RuntimeException("required edges regex failed");
+        int requiredCount = Integer.parseInt(requiredCountMatch.group());
+
+        //ARISTAS_NOREQ
+        line = bufferedReader.readLine();
+        Matcher optionalCountMatch = patternDigit.matcher(line);
+        if(!optionalCountMatch.find()) throw new RuntimeException("optional edges regex failed");
+        int optionalCount = Integer.parseInt(optionalCountMatch.group());
+
+
+        //VEHICULOS
+        line = bufferedReader.readLine();
+        Matcher vehiclesMatch = patternDigit.matcher(line);
+        if(!vehiclesMatch.find()) throw new RuntimeException();
+        int vehicles = Integer.parseInt(vehiclesMatch.group());
+
+
+        //CAPACIDAD
+        line = bufferedReader.readLine();
+        Matcher capacityMatch = patternDigit.matcher(line);
+        if(!capacityMatch.find()) throw  new RuntimeException();
+        int capacity = Integer.parseInt(capacityMatch.group());
+
+
+        //TIPO_COSTES_ARISTAS
+        line = bufferedReader.readLine();
+
+        //COSTE_TOTAL_REQ
+        line = bufferedReader.readLine();
+
+        //LISTA_ARISTAS_REQ
+        line = bufferedReader.readLine();
+
+        Pattern patternRequired = Pattern.compile("\\(\\s+(\\d+),\\s+(\\d+)\\)\\s+coste\\s+(\\d+)\\s+demanda\\s+(\\d+)");
+        Pattern patternOptional = Pattern.compile("\\(\\s+(\\d+),\\s+(\\d+)\\)\\s+coste\\s+(\\d+)");
+
+        List<Node> nodes = new ArrayList<>();
+
+//        while((line = bufferedReader.readLine()) != null){
+        for (int i = 0; i < requiredCount; i++) {
+            line = bufferedReader.readLine();
+            processEdge(line, patternRequired, nodes, true);
         }
-        return new Evaluation(cumulativeCost, routes.size());
+
+        if (optionalCount > 0){
+            bufferedReader.readLine();
+            for (int i = 0; i < optionalCount; i++) {
+                line = bufferedReader.readLine();
+                processEdge(line, patternOptional, nodes, false);
+            }
+        }
+
+        line = bufferedReader.readLine();
+        Matcher depotMatcher = patternDigit.matcher(line);
+        if(!depotMatcher.find()) throw new RuntimeException("invalid input, depot number not found at the end");
+        int depot = Integer.parseInt(depotMatcher.group());
+
+        List<Edge> edges = makeEdges(nodes);
+
+        return new Config(nodes, edges, depot, vehicles, capacity);
     }
 
-    public static List<Route> construct(List<Edge> priority, Entry[][] entries, Config config){
+    public static List<Route> construct(List<Edge> priority, Config config, JournalPair journalPair,
+                                        boolean journaling, JournalType journalType){
         List<Route> routes = new ArrayList<>();
         for (int i = 0; i < priority.size(); i++) {
-            routes.add(new Route(priority.get(i), config.capacity));
+            Edge edge = priority.get(i);
+            routes.add(new Route(edge, config.capacity));
         }
 
         for (int i = 0; i < priority.size(); i++) {
 //            System.out.println("Iteration " + i);
             Edge edge = priority.get(i);
-            //identify component (Route)
-//            Route route = routes.stream().filter(r -> r.edges.contains(edge)).findFirst().get();
             Route route = edge.component;
-            System.out.println("Route tail + head");
-            System.out.println(route.tail);
-            System.out.println(route.head);
 
+            Candidate selectedCandidate = selectFromRoutes(routes, route, config.matrix, journalPair, journaling, journalType);
 
-            List<Integer> ends = route.findOuterNodes();
-            int left = ends.get(0);
-            int right = ends.get(1);
-
-            //TODO efektivneji vybrat entries aby se nemuselo filtrovat cele pokazde, nejak to mergnout
-//            List<Entry> closestLeftCandidates = Arrays.stream(entries[left]).filter(entry -> nodeToComponent(entry.nodeNumber, routes) != route && entry.distance < Double.POSITIVE_INFINITY).toList();
-//            List<Entry> closestRightCandidates = Arrays.stream(entries[right]).filter(entry -> nodeToComponent(entry.nodeNumber, routes) != route && entry.distance < Double.POSITIVE_INFINITY).toList();
-            List<Entry> closestLeftCandidates = Arrays.stream(entries[left]).filter(entry -> entryToComponent(entry, route) && entry.distance < Double.POSITIVE_INFINITY).toList();
-            List<Entry> closestRightCandidates = Arrays.stream(entries[right]).filter(entry -> entryToComponent(entry, route) && entry.distance < Double.POSITIVE_INFINITY).toList();
-            List<Entry> closestLRCandidates;
-            //            List<Entry> closestLRCandidates = mergeEntryLists(closestLeftCandidates, closestRightCandidates);
-            closestLRCandidates = new ArrayList<>(Stream.concat(closestLeftCandidates.stream(), closestRightCandidates.stream()).toList());
-            closestLRCandidates.sort(new Comparator<Entry>() {
-                @Override
-                public int compare(Entry o1, Entry o2) {
-                    return Double.compare(o1.distance, o2.distance); }
-            });
-
-            System.out.println("merged candidates");
-            System.out.println(closestLRCandidates);
-
-
-
-            //doneTODO optimize
-//            List<Edge> candidates = edges.stream().filter(e -> e.hasNode(finalMinEntry.nodeNumber) && e.required && edgeToComponent(e, routes) != route).toList();
-//            List<Edge> candidates = config.edgeMap.get(minEntry.nodeNumber).stream().filter(e -> e.required && edgeToComponent(e, routes) != route).toList();
-            List<Candidate> edgeCandidates = getCandidatesFromMultipleNodes(closestLRCandidates, config.edgeMap, route, routes);
-
-//            System.out.println(route.findOuterNodes());
-//            System.out.println("Candidates through  " + route.findOuterNodes());
-//            System.out.println(edgeCandidates);
-            assert edgeCandidates.size() > 0;
-
-            Candidate selectedCandidate = selectViableCandidate(route, edgeCandidates);
-//            System.out.println("Route tail + head");
-//            System.out.println(route.tail);
-//            System.out.println(route.head);
-            System.out.println("selected candidate");
-            System.out.println(selectedCandidate);
             if(selectedCandidate == null){
-                //TODO vrat se zpet do depot
-//                System.out.println("je null");
-                route.add(new Separator());
+                //TODO vrat se zpet do depot, NEMUSIM RESIT
             }
             else{
                 route.mergeRouteE(selectedCandidate);
-//                route.mergeRoutes(selectedCandidate);
-//                route.add(selectedCandidate.edge, connectingNode, selectedCandidate.toNode.number);
             }
-
-//            Element ocas = route.tail;
-//            System.out.println("looping");
-//            while (ocas != null) {
-////                System.out.println(ocas);
-////                System.out.println(ocas.candidate.edge.component);
-//                ocas = ocas.next;
-//            }
-//            System.out.println(route.active);
-//            System.out.println(route.findOuterNodes());
-
-//            if (i == 2) break;
         }
 
-        List<Route> finalList = new ArrayList<>();
-        for (Route r : routes) {
-//            System.out.println(r.active);
-            if(!r.active){
-                continue;
-            }
-            System.out.println("new route " + r.capacityTaken + " length: " + r.length());
-            System.out.println(r.findOuterNodes());
-            System.out.println(r.tail.previousLink);
-            System.out.println(r.head.nextLink);
-            System.out.println("objects:");
-            System.out.println(r.findOuterNodesObj());
-            finalList.add(r);
-
-            Element el = r.tail;
-            while(el != null){
-                System.out.println();
-                System.out.println(el.previousLink);
-                System.out.println(el.candidate.edge);
-                System.out.println(el.nextLink);
-                System.out.println(el.nextDistance);
-                el = el.next;
-            }
-
-            System.out.println(r.findOuterNodes());
-
-        }
-
-        return finalList;
+        return new ArrayList<>(routes.stream().filter(r -> r.active).collect(Collectors.toList()));
     }
 
-    public static double evaluateRoute(Route route, Double[][] matrix2){
+    public static Evaluation evaluatePriorityList(List<Edge> priority, Config config, JournalPair journalPair,
+                                                  boolean journaling, JournalType journalType){
+        List<Route> routes = construct(priority, config, journalPair, journaling, journalType);
+        int cumulativeCost = evaluateRoutes(routes, config);
+        return new Evaluation(cumulativeCost, routes.size(), routes);
+    }
+
+    public static int evaluateRoutes(List<Route> routes, Config config){
+        int cumulativeCost = 0;
+        for (Route r :
+                routes) {
+            cumulativeCost += evaluateRoute(r, config.matrix);
+        }
+        return cumulativeCost;
+    }
+
+
+    public static double evaluateRoute(Route route, Double[][] matrix){
+        if(route.tail == null) return 0.0;
+
         Element element = route.tail;
         double cost = 0;
         while(element != null){
             cost += element.candidate.edge.cost;
-            cost += element.nextDistance;
+            if(element.next != null)
+                cost += element.nextDistance;
             element = element.next;
         }
-        for (Node krajni :
-                route.findOuterNodesObj()) {
-            if(krajni.number == 1){
-                continue;
-            }
-            cost += matrix2[krajni.number][1];
-        }
+//        for (Node krajni :
+//                route.findOuterNodesObj()) {
+//            cost += matrix[krajni.number][1];
+//        }
+//        cost += matrix[route.tail.previousLink.number][1];
+//        cost += matrix[route.head.nextLink.number][1];
+
+        route.tail.previousDistance = matrix[route.tail.previousLink.number][1];
+        route.head.nextDistance = matrix[route.head.nextLink.number][1];
+
+        cost += route.tail.previousDistance;
+        cost += route.head.nextDistance;
+
         return cost;
     }
 
-    /**
-     * Component = Route which and edge is part of
-     */
-    public static Route nodeToComponent(int node, List<Route> routes){
-        int componentCount = 0;
-        Route onlyRoute = null;
-        for (int i = 0; i < routes.size(); i++) {
-            Route route = routes.get(i);
-//            for (int j = 0; j < route.edges.size(); j++) {
-//                Edge edge = route.edges.get(j);
-//                if(edge.leftNumber == node || edge.rightNumber == node){
-//                    return route;
-//                }
-//            }
-            if(route.containsNodeI(node)){
-                componentCount++;
-                onlyRoute = route;
-            }
+    public static List<Edge> deepCopy(List<Edge> priorityList){
+        List<Edge> newPriorityList = new ArrayList<>();
+        for (Edge e: priorityList){
+            newPriorityList.add(new Edge(e));
         }
-
-        if(componentCount > 1){
-            return null;
-        }
-
-        return onlyRoute;
+        return newPriorityList;
     }
 
-    public static boolean entryToComponent(Entry entry, Route route){
-        if(entry.toNode == null){
-            return false;
-        }
-        for (Edge e : entry.toNode.edges){
-            if(e.component != route){
-                return true;
-            }
-        }
-        return false;
-    }
-
-    public static Route edgeToComponent(Edge edge, List<Route> routes){
-        for (int i = 0; i < routes.size(); i++) {
-            Route route = routes.get(i);
-            if(route.edges.contains(edge)){
-                return route;
-            }
-        }
-        return null;
-    }
-
-    public static Entry[][] createEntries(Double[][] matrix2, List<Node> nodes){
-        Entry[][] entries = new Entry[matrix2.length][];
-        for (int i = 1; i < matrix2.length; i++) {
-            Double[] row = matrix2[i];
-            Entry[] entryRow = new Entry[matrix2[i].length];
-            for (int j = 0; j < matrix2[i].length; j++) {
-                int finalJ = j;
-                Optional<Node> toNode = nodes.stream().filter(n -> n.number == finalJ).findFirst();
-
-                int finalI = i;
-                Optional<Node> fromNode = nodes.stream().filter(n -> n.number == finalI).findFirst();
-
-                entryRow[j] = new Entry(j, matrix2[i][j], i, toNode, fromNode);
-            }
-            Arrays.sort(entryRow, new Comparator<Entry>() {
-                @Override
-                public int compare(Entry o1, Entry o2) {
-                    return Double.compare(o1.distance, o2.distance);
-                }
-            });
-            entries[i] = entryRow;
-        }
-        return entries;
-    }
-
-    public static List<Object> floydWarshall(List<Node> nodes){
+    public static Double[][] floydWarshall(List<Node> nodes){
         Node[] nodeArray = getNodeArray(nodes);
 
 //        Integer[][] matrix = new Integer[nodes.size()+1][nodes.size()+1];
         Double[][] matrix = new Double[nodes.size()+1][nodes.size()+1];
 
-        System.out.println(matrix.length);
+//        System.out.println(matrix.length);
 
         for (int i = 1; i < matrix.length; i++) {
             for (int j = 1; j < matrix.length; j++) {
@@ -318,15 +339,6 @@ public class Main {
             }
         }
 
-//        for (int i = 0; i < matrix.length; i++) {
-//            for (int j = 0; j < matrix.length; j++) {
-//                System.out.print(matrix[i][j]);
-//                System.out.print(" ");
-//            }
-//            System.out.println();
-//        }c
-
-
         Double[][] matrix2 = new Double[matrix.length][];
 
         Node n = null;
@@ -342,12 +354,12 @@ public class Main {
                 }
                 if (i == j) {
 //                    matrix[i][j] = 0.0;
-                    matrix[i][j] = Double.POSITIVE_INFINITY;
+//                    matrix[i][j] = Double.POSITIVE_INFINITY;
                     matrix2[i][j] = Double.POSITIVE_INFINITY;
 
                     //potrebuji zjistit jestli se vrchol nachazi ve vice pozadovanych hranach
                     int finalI = i;
-                    if(nodes.stream().filter(n_ -> n_.number == finalI).findFirst().get().nodes.stream().filter(n_ -> n_.hasRequired).toList().size() > 1){
+                    if(nodes.stream().filter(n_ -> n_.number == finalI).findFirst().get().nodes.stream().filter(n_ -> n_.hasRequired).collect(Collectors.toList()).size() > 1){
                         matrix2[i][j] = 0.0;
                     }
 //                    continue;
@@ -361,21 +373,10 @@ public class Main {
             }
         }
 
-//        return matrix;
-        return Arrays.asList(matrix, matrix2);
+        return matrix;
+//        return Arrays.asList(matrix, matrix2);
     }
 
-    public static int argMinArray(Double[] array){
-        Double min = Double.POSITIVE_INFINITY;
-        int arg = -1;
-        for (int i = 0; i < array.length; i++) {
-            if (array[i]<min){
-                min = array[i];
-                arg = i;
-            }
-        }
-        return arg;
-    }
 
     public static Node[] getNodeArray(List<Node> nodes){
         Node[] nodesArray = new Node[nodes.size() + 1];
@@ -385,116 +386,8 @@ public class Main {
         return nodesArray;
     }
 
-    public static List<Entry> filterEntries(int left, int right, List<Route> routes, Route route){
-        return null;
-    }
-
-    //TODO nemusí fungovat, protoze zadny z tech minimal nemusi byt vyhovujici pro
-    public static List<Entry> mergeEntryLists(List<Entry> e1, List<Entry> e2){
-        double minimal1 = e1.get(0).distance;
-        double minimal2 = e2.get(0).distance;
-        List<Entry> result = new ArrayList<>();
-        double minimal = minimal2;
-        if (minimal1 < minimal2){
-            minimal = minimal1;
-        }
-        for (Entry e : e1) {
-            if(e.distance > minimal)
-                break;
-            result.add(e);
-        }
-        for (Entry e : e2){
-            if (e.distance > minimal)
-                break;
-            result.add(e);
-        }
-        return result;
-    }
-
     public static Node getNode(List<Node> nodes, int number){
         return nodes.stream().filter(n -> n.number == number).findFirst().get();
-    }
-
-    public static Config readGDB() throws IOException {
-        FileReader fileReader = new FileReader("C:\\Users\\Asus\\ownCloud\\cvut\\carp\\carpbak\\src\\main\\resources\\test2.dat");
-        BufferedReader bufferedReader = new BufferedReader(fileReader);
-
-        String line;
-        Pattern patternDigit = Pattern.compile("\\d+");
-
-        //NOMBRE
-        line = bufferedReader.readLine();
-
-        //COMENTARIO
-        line = bufferedReader.readLine();
-
-        //VERTICES
-        line = bufferedReader.readLine();
-
-        //ARISTAS_REQ
-        line = bufferedReader.readLine();
-        Matcher requiredCountMatch = patternDigit.matcher(line);
-        if(!requiredCountMatch.find()) throw new RuntimeException("required edges regex failed");
-        int requiredCount = Integer.parseInt(requiredCountMatch.group());
-        System.out.println(requiredCount);
-
-        //ARISTAS_NOREQ
-        line = bufferedReader.readLine();
-        Matcher optionalCountMatch = patternDigit.matcher(line);
-        if(!optionalCountMatch.find()) throw new RuntimeException("optional edges regex failed");
-        int optionalCount = Integer.parseInt(optionalCountMatch.group());
-        System.out.println(optionalCount);
-
-        //VEHICULOS
-        line = bufferedReader.readLine();
-        Matcher vehiclesMatch = patternDigit.matcher(line);
-        if(!vehiclesMatch.find()) throw new RuntimeException();
-        int vehicles = Integer.parseInt(vehiclesMatch.group());
-        System.out.println(vehicles);
-
-        //CAPACIDAD
-        line = bufferedReader.readLine();
-        Matcher capacityMatch = patternDigit.matcher(line);
-        if(!capacityMatch.find()) throw  new RuntimeException();
-        int capacity = Integer.parseInt(capacityMatch.group());
-        System.out.println(capacity);
-
-        //TIPO_COSTES_ARISTAS
-        line = bufferedReader.readLine();
-
-        //COSTE_TOTAL_REQ
-        line = bufferedReader.readLine();
-
-        //LISTA_ARISTAS_REQ
-        line = bufferedReader.readLine();
-
-        Pattern patternRequired = Pattern.compile("\\( (\\d+), (\\d+)\\)\\s+coste\\s+(\\d+)\\s+demanda\\s+(\\d+)");
-        Pattern patternOptional = Pattern.compile("\\( (\\d+), (\\d+)\\)\\s+coste\\s+(\\d+)");
-
-        List<Node> nodes = new ArrayList<>();
-
-//        while((line = bufferedReader.readLine()) != null){
-        for (int i = 0; i < requiredCount; i++) {
-            line = bufferedReader.readLine();
-            processEdge(line, patternRequired, nodes, true);
-        }
-
-        if (optionalCount > 0){
-            bufferedReader.readLine();
-            for (int i = 0; i < optionalCount; i++) {
-                line = bufferedReader.readLine();
-                processEdge(line, patternOptional, nodes, false);
-            }
-        }
-
-        line = bufferedReader.readLine();
-        Matcher depotMatcher = patternDigit.matcher(line);
-        if(!depotMatcher.find()) throw new RuntimeException("invalid input, depot number not found at the end");
-        int depot = Integer.parseInt(depotMatcher.group());
-
-        List<Edge> edges = makeEdges(nodes);
-
-        return new Config(nodes, edges, depot, vehicles, capacity);
     }
 
     public static List<Edge> makeEdges(List<Node> nodes){
@@ -527,43 +420,112 @@ public class Main {
     }
 
     /**
-        get candidates more effectively
+     * stezejni metoda, ve ktereho dochazi k vyberu nejvhodnejsiho kandidata na prodlouzeni cesty
      */
-    public static List<Candidate> getCandidatesFromMultipleNodes(List<Entry> entries, Map<Integer, List<Edge>> edgeMap, Route route, List<Route> routes){
+    public static Candidate selectFromRoutes(List<Route> routes, Route route, Double[][] matrix,
+                                             JournalPair journalPair, boolean journaling,
+                                             JournalType journalType){
+        Node outerLeft = route.tail.previousLink;
+        Node outerRight = route.head.nextLink;
 
         List<Candidate> candidates = new ArrayList<>();
-        for (Entry entry : entries){
-//            edges.addAll(edgeMap.get(entry.nodeNumber).stream().filter(e -> e.required && e.component != route).toList());
-            for(Edge e : edgeMap.get(entry.toNodeNumber).stream().filter(_e -> _e.required && _e.component != route).collect(Collectors.toList())){
-                candidates.add(new Candidate(e, entry.toNode, entry.fromNode, entry.distance));
+
+        //podivej se na vsechny ostatni rozpracovane cesty a jejich krajni body, uvaz pouze ty ktere vyhovuji kapacitnim omezenim
+        for (Route r :
+                routes) {
+            if(!r.active || r == route){
+                continue;
+            }
+            Node left = r.tail.previousLink;
+            Node right = r.head.nextLink;
+
+            Candidate c;
+            if((c = evaluateCandidate(route, outerLeft, route.tail.candidate.edge, left, r.tail.candidate.edge, matrix,
+                    journalPair)) != null){
+                candidates.add(c);
+            }
+            if((c = evaluateCandidate(route, outerLeft, route.tail.candidate.edge, right, r.head.candidate.edge, matrix,
+                    journalPair)) != null){
+                candidates.add(c);
+            }
+            if((c = evaluateCandidate(route, outerRight, route.head.candidate.edge, left, r.tail.candidate.edge, matrix,
+                    journalPair)) != null){
+                candidates.add(c);
+            }
+            if((c = evaluateCandidate(route, outerRight, route.head.candidate.edge, right, r.head.candidate.edge, matrix,
+                    journalPair)) != null){
+                candidates.add(c);
             }
         }
-        return candidates;
-    }
 
-    /**
-     * selects candidates based on current remaining vehicle capacity
-     * @return
-     */
-    public static Candidate selectViableCandidate(Route route, List<Candidate> candidates){
-        for (int i = 0; i < candidates.size(); i++) {
-            Candidate candidate = candidates.get(i);
-            //TODO musím zajistit aby vybrany node byl na kraji svoji komponenty
-            if(!candidate.edge.component.findOuterNodes().contains(candidate.toNode.number)){
-                continue;
-            }
-            if(!(candidate.edge.component.tail.candidate.edge == candidate.edge || candidate.edge.component.head.candidate.edge == candidate.edge)){
-                continue;
-            }
+//        Collections.sort(candidates, Comparator.comparingDouble(Candidate::getScore).thenComparingInt(Candidate::getToNodeNumber).thenComparingInt(Candidate::getFromNodeNumber).thenComparingInt(Candidate::hashCode));
 
-            //greedy
-//            if(candidate.edge.component.capacityLeft >= route.capacityTaken){
-            if(route.capacityLeft >= candidate.edge.component.capacityTaken){
-//            if(candidate.edge.component2.capacityTaken <= route.capacityLeft){
-                return candidate;
-            }
+
+        //vybrani nejlepsiho kandidata nejprve podle vzdalenosti, poto podle zaznamu v journal (getJournalEntry())
+        if(!journaling){
+            Collections.sort(candidates, Comparator.comparingDouble(Candidate::getDistance));
+        }
+        if(journaling){
+            if(journalType == JournalType.EDGE)
+                Collections.sort(candidates, Comparator.comparingDouble(Candidate::getJournalEdgeEntry).thenComparingDouble(Candidate::getDistance));
+            else if(journalType == JournalType.NODE)
+                Collections.sort(candidates, Comparator.comparingDouble(Candidate::getJournalEntry).thenComparingDouble(Candidate::getDistance));
+            else if(journalType == JournalType.BASIC)
+                Collections.sort(candidates, Comparator.comparingDouble(Candidate::getDistance));
+        }
+
+        //vyber prvniho nejlepsiho
+        if(candidates.size() > 0){
+            return candidates.get(0);
         }
         return null;
+    }
+
+    public static Candidate evaluateCandidate(Route route, Node fromNode, Edge fromEdge, Node toNode, Edge toEdge,
+                                              Double[][] matrix, JournalPair journalPair){
+        if(toEdge.component == route || route.capacityLeft < toEdge.component.capacityTaken){
+            return null;
+        }
+        Candidate c = new Candidate(toEdge, toNode, fromNode, matrix[fromNode.number][toNode.number]);
+        //TODO score evaluation bude pocitat s cetnosti
+        c.score = c.distance;
+
+        Map<Node, Map<Node, AnalysisNode>> journal = journalPair.journal;
+        Map<Domain, Map<Domain, AnalysisNode>> journalEdge = journalPair.journalEdge;
+
+
+        if(journal.containsKey(fromNode)){
+            Map<Node, AnalysisNode> subJournal = journal.get(fromNode);
+            if(subJournal.containsKey(toNode)){
+                AnalysisNode an = subJournal.get(toNode);
+                c.journalEntry = an.sum/an.count;
+            }
+            else{
+                c.journalEntry = Double.POSITIVE_INFINITY;
+            }
+        }
+        else{
+            c.journalEntry = Double.POSITIVE_INFINITY;
+        }
+
+        Domain domainFrom = new Domain(fromEdge, fromNode);
+        if(journalEdge.containsKey(domainFrom)){
+            Map<Domain, AnalysisNode> subJournalEdge = journalEdge.get(domainFrom);
+            Domain domainTo = new Domain(toEdge, toNode);
+            if(subJournalEdge.containsKey(domainTo)){
+                AnalysisNode an = subJournalEdge.get(domainTo);
+                c.journalEdgeEntry = an.sum/an.count;
+            }
+            else{
+                c.journalEdgeEntry = Double.POSITIVE_INFINITY;
+            }
+        }
+        else{
+            c.journalEdgeEntry = Double.POSITIVE_INFINITY;
+        }
+
+
+        return c;
     }
 
     public static void processEdge(String line, Pattern pattern, List<Node> nodes, boolean required){
@@ -590,11 +552,9 @@ public class Main {
         if(nodes.stream().anyMatch(n -> n.number == number)){
             return nodes.stream().filter(n -> n.number == number).findFirst().get();
         }
-        Node newNode =  new Node(number);
+        Node newNode = new Node(number);
         nodes.add(newNode);
         return newNode;
     }
-
-
 
 }
